--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^0.70.0
   math_expressions: ^2.6.0
   flutter_simple_calculator: ^2.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
