--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/images/
+  assets:
+    - assets/images/human.png
+    - assets/images/investments/assets/bitcoin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
