--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   math_expressions: ^2.6.0
   flutter_simple_calculator: ^2.3.0
   intl: ^0.19.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
