--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_simple_calculator: ^2.3.0
   intl: ^0.19.0
   carousel_slider: ^5.0.0
+  material_charts: ^0.0.25
 
 dev_dependencies:
   flutter_test:
